# otus_cpp_professional

./: .gitignore
.github/workflows/: doxygen.yml  release.yml
01_helloWorld/: CMakeLists.txt  gtests.cpp  lib.cpp  main.cpp  version.h.in
01_helloWorld/GTests/: CMakeLists.txt  test_version.cpp
02_ipFilter/: CMakeLists.txt  gtests.cpp  ip_filter.cpp  ip_filter.h  res.tsv  test_case.tsv
03_allocator/: main.cpp
04_ipTemplates/: CMakeLists.txt  gtests.cpp  ip  ipParser.hpp  main.cpp
bulk/: CMakeLists.txt  gtests.cpp  interface.hpp  main.cpp  observable.hpp  observer.hpp
editor/: CMakeLists.txt  EditorController.hpp  EditorModel.hpp  EditorView.hpp  IShape.hpp  gtests.cpp  main.cpp
helloworld/: CMakeLists.txt
ip_filter/: CMakeLists.txt  main.cpp
matrix/: CMakeLists.txt  gtests.cpp  main.cpp  matrix.hpp
print_ip/: CMakeLists.txt  Doxyfile
task1/: CMakeLists.txt  README.md  test_version.cpp
